--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,11 +4,36 @@
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- Import CSS intro your HTML -->
+	<link href="/css/bootstrap.css" rel="stylesheet">
+	<link href="/css/bootstrap-theme.css" rel="stylesheet">
+	<link href="/css/hci-friends.css" rel="stylesheet">
+
 </head>
 
 <body>
+  <div class="container">
 	<h1>My HCI Friends</h1>
+
+	{{#each friends}}
+	<div class="friends">
+			<img src="{{imageURL}}" class="img-responsive">
+			<a href='#' class="friendnames" class=click-listener>
+			<h3>{{name}}</h3>
+						<a href='#' class=click-listener>{{name}}</a></h3>
+		  </a>
+		  <p>{{description}}</p>
+			</div>
+  {{/each}}
+
+	<div class="friend">
+			<img src="http://lorempixel.com/500/500/people" class="img">
+			<h3>Fake AF friend right hurr</h3>
+					<a href='#' class='click-listener'>{{ name }}</a></h3>
+			<p>I do not know this person.</p>
+	</div>
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
@@ -22,5 +47,11 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+
+	<!-- Import JavaScript into your HTML -->
+	<script src="/js/jquery-1.11.0.js"></script>
+	<script src="/js/bootstrap.js"></script>
+	<script src="/js/hci-friends.js"></script>
+	</div>
 </body>
 </html>
